--- a/styl/_buttons.styl
+++ b/styl/_buttons.styl
@@ -1,7 +1,9 @@
 input[type=submit],
 input[type=reset],
 input[type=button],
-button
+button,
+input[type=file]::-webkit-file-upload-button,
+input[type=file]::file-selector-button
   background-color: $primary
   border: $primary
   border-radius: $br
@@ -21,13 +23,16 @@ button
 input[type=submit]::-moz-focus-inner,
 input[type=reset]::-moz-focus-inner,
 input[type=button]::-moz-focus-inner,
-button::-moz-focus-inner
+button::-moz-focus-inner,
+input[type=file]::file-selector-button::-moz-focus-inner
   padding: 0
 
 input[type=submit]:hover,
 input[type=reset]:hover,
 input[type=button]:hover,
-button:hover
+button:hover,
+input[type=file]::-webkit-file-upload-button:hover,
+input[type=file]::file-selector-button:hover
   background-color: darken($primary, 15%)
   border-color: darken($primary, 20%)
   color: $white
@@ -35,7 +40,9 @@ button:hover
 input[type=submit]:active,
 input[type=reset]:active,
 input[type=button]:active,
-button:active
+button:active,
+input[type=file]::-webkit-file-upload-button:active,
+input[type=file]::file-selector-button:active
   background-color: darken($primary, 20%)
   border-color: darken($primary, 25%)
   color: $white
@@ -43,14 +50,18 @@ button:active
 input[type=submit]:focus,
 input[type=reset]:focus,
 input[type=button]:focus,
-button:focus
+button:focus,
+input[type=file]:focus::-webkit-file-upload-button,
+input[type=file]:focus::file-selector-button
   outline: 0
   box-shadow: 0 0 0 0.2rem alpha($primary, 0.5)
 
 input[type=submit]:disabled,
 input[type=reset]:disabled,
 input[type=button]:disabled,
-button:disabled
+button:disabled,
+input[type=file]:disabled::-webkit-file-upload-button,
+input[type=file]:disabled::file-selector-button
   opacity: .65
   cursor: not-allowed
   background-color: $primary
