--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -1,7 +1,9 @@
 input[type=submit],
 input[type=reset],
 input[type=button],
-button {
+button,
+input[type=file]::-webkit-file-upload-button,
+input[type=file]::file-selector-button {
   background-color: $primary;
   border: $primary;
   border-radius: $br;
@@ -22,14 +24,18 @@ button {
 input[type=submit]::-moz-focus-inner,
 input[type=reset]::-moz-focus-inner,
 input[type=button]::-moz-focus-inner,
-button::-moz-focus-inner {
+button::-moz-focus-inner,
+button::-moz-focus-inner	button::-moz-focus-inner,
+input[type=file]::file-selector-button::-moz-focus-inner {
   padding: 0;
 }
 
 input[type=submit]:hover,
 input[type=reset]:hover,
 input[type=button]:hover,
-button:hover {
+button:hover,
+input[type=file]::-webkit-file-upload-button:hover,
+input[type=file]::file-selector-button:hover {
   background-color: darken($primary, 7.5%);
   border-color: darken($primary, 10%);
   color: $white;
@@ -38,7 +44,9 @@ button:hover {
 input[type=submit]:not(:disabled):active,
 input[type=reset]:not(:disabled):active,
 input[type=button]:not(:disabled):active,
-button:not(:disabled):active {
+button:not(:disabled):active,
+input[type=file]:not(:disabled)::-webkit-file-upload-button:active,
+input[type=file]:not(:disabled)::file-selector-button:active {
   background-color: darken($primary, 10%);
   border-color: darken($primary, 12.5%);
   color: $white;
@@ -47,7 +55,9 @@ button:not(:disabled):active {
 input[type=submit]:focus,
 input[type=reset]:focus,
 input[type=button]:focus,
-button:focus {
+button:focus,
+input[type=file]:focus::-webkit-file-upload-button,
+input[type=file]:focus::file-selector-button {
   outline: 0;
   box-shadow: 0 0 0 0.2rem fade_out($primary, 0.5);
 }
@@ -55,7 +65,9 @@ button:focus {
 input[type=submit]:disabled,
 input[type=reset]:disabled,
 input[type=button]:disabled,
-button:disabled {
+button:disabled,
+input[type=file]:disabled::-webkit-file-upload-button,
+input[type=file]:disabled::file-selector-button {
   opacity: .65;
   cursor: not-allowed;
   background-color: $primary;
