--- a/css/marx.css
+++ b/css/marx.css
@@ -836,7 +836,9 @@ input[type=radio] {
 input[type=submit],
 input[type=reset],
 input[type=button],
-button {
+button,
+input[type=file]::-webkit-file-upload-button,
+input[type=file]::file-selector-button {
   background-color: #007bff;
   border: #007bff;
   border-radius: 4px;
@@ -848,8 +850,6 @@ button {
   white-space: nowrap;
   vertical-align: middle;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
   border: 1px solid transparent;
   font-size: 1rem;
@@ -862,13 +862,17 @@ button {
 input[type=submit]::-moz-focus-inner,
 input[type=reset]::-moz-focus-inner,
 input[type=button]::-moz-focus-inner,
-button::-moz-focus-inner {
+button::-moz-focus-inner,
+button::-moz-focus-inner button::-moz-focus-inner,
+input[type=file]::file-selector-button::-moz-focus-inner {
   padding: 0; }
 
 input[type=submit]:hover,
 input[type=reset]:hover,
 input[type=button]:hover,
-button:hover {
+button:hover,
+input[type=file]::-webkit-file-upload-button:hover,
+input[type=file]::file-selector-button:hover {
   background-color: #0069d9;
   border-color: #0062cc;
   color: #fff; }
@@ -876,7 +880,9 @@ button:hover {
 input[type=submit]:not(:disabled):active,
 input[type=reset]:not(:disabled):active,
 input[type=button]:not(:disabled):active,
-button:not(:disabled):active {
+button:not(:disabled):active,
+input[type=file]:not(:disabled)::-webkit-file-upload-button:active,
+input[type=file]:not(:disabled)::file-selector-button:active {
   background-color: #0062cc;
   border-color: #005cbf;
   color: #fff; }
@@ -884,7 +890,9 @@ button:not(:disabled):active {
 input[type=submit]:focus,
 input[type=reset]:focus,
 input[type=button]:focus,
-button:focus {
+button:focus,
+input[type=file]:focus::-webkit-file-upload-button,
+input[type=file]:focus::file-selector-button {
   outline: 0;
   -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
           box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5); }
@@ -892,7 +900,9 @@ button:focus {
 input[type=submit]:disabled,
 input[type=reset]:disabled,
 input[type=button]:disabled,
-button:disabled {
+button:disabled,
+input[type=file]:disabled::-webkit-file-upload-button,
+input[type=file]:disabled::file-selector-button {
   opacity: .65;
   cursor: not-allowed;
   background-color: #007bff;
